--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 13:05:06 2018</p>
+         Last Run: Tue Nov 20 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
-                        <td>66</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>67</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>1</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSW</td>
-                        <td>68</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "65",
-                 "69"
+                 "58",
+                 "64",
+                 "70"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "67",
-                 "68"
+                 "70",
+                 "69",
+                 "70"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 13:05:06 2018</p>
+         Last Run: Tue Nov 20 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -260,11 +260,11 @@
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>60</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SSW</td>
+                        <td>NNW</td>
                         <td>57</td>
                      </tr>
                      <tr>
@@ -273,23 +273,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSE</td>
-                        <td>51</td>
+                        <td>NE</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SE</td>
-                        <td>38</td>
+                        <td>10</td>
+                        <td>E</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,7 +320,7 @@
                  "-5",
                  "-4",
                  "-3",
-                 "-3"
+                 "-4"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-2",
                  "-1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -392,7 +392,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "4",
+                 "3",
                  "3",
                  "4"
                ]
@@ -405,8 +405,8 @@
                "data":[
                  "66",
                  "60",
-                 "56",
-                 "57"
+                 "57",
+                 "58"
                ]
              },
              {
@@ -417,8 +417,8 @@
                "data":[
                  "57",
                  "57",
-                 "51",
-                 "38"
+                 "52",
+                 "39"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 13:05:06 2018</p>
+         Last Run: Tue Nov 20 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,38 +480,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>60</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>-2</td>
+                        <td>2</td>
+                        <td>54</td>
+                        <td>1</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>45</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>44</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
-                 "-4",
-                 "-3"
+                 "-3",
+                 "-2",
+                 "0"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-1",
-                 "0"
+                 "0",
+                 "1",
+                 "2"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "60",
-                 "56"
+                 "58",
+                 "54",
+                 "51"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "45",
-                 "44"
+                 "43",
+                 "43",
+                 "42"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 13:05:06 2018</p>
+         Last Run: Tue Nov 20 14:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>3</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>4</td>
-                        <td>75</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>3</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>4</td>
-                        <td>75</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>3</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>41</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,9 +753,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-8",
-                 "-7"
+                 "-6",
+                 "-6",
+                 "-6"
                ]
              },
              {
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-4",
-                 "-4",
-                 "-3"
+                 "-2",
+                 "-2",
+                 "-2"
                ]
              }
            ]
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "75",
-                 "75"
+                 "72",
+                 "72",
+                 "73"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "36",
-                 "41"
+                 "67",
+                 "70",
+                 "74"
                ]
              }
            ]
