--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 14:05:06 2018</p>
+         Last Run: Tue Nov 20 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>69</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
-                        <td>70</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "64",
-                 "70"
+                 "59",
+                 "66",
+                 "69"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "69",
-                 "70"
+                 "61",
+                 "62",
+                 "67"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 14:05:06 2018</p>
+         Last Run: Tue Nov 20 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -246,50 +246,50 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>6</td>
-                        <td>66</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>57</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>3</td>
-                        <td>60</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>NNW</td>
-                        <td>57</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
                         <td>57</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>ENE</td>
+                        <td>23</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Clear</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>3</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
-                        <td>52</td>
+                        <td>E</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>4</td>
-                        <td>58</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,10 +317,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
                  "-4",
                  "-3",
-                 "-4"
+                 "-2",
+                 "-3"
                ]
              },
              {
@@ -330,10 +330,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
                  "-1",
                  "0",
-                 "-1"
+                 "1",
+                 "0"
                ]
              }
            ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "60",
+                 "62",
                  "57",
-                 "58"
+                 "54",
+                 "55"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "57",
-                 "52",
-                 "39"
+                 "43",
+                 "23",
+                 "12",
+                 "12"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 14:05:06 2018</p>
+         Last Run: Tue Nov 20 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -495,7 +495,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "58",
-                 "54",
+                 "53",
                  "51"
                ]
              },
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 14:05:06 2018</p>
+         Last Run: Tue Nov 20 15:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
