--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 15:05:06 2018</p>
+         Last Run: Tue Nov 20 16:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -36,9 +36,9 @@
                         <td>1</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SSW</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>62</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "59",
-                 "66",
-                 "69"
+                 "67",
+                 "70"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "61",
                  "62",
-                 "67"
+                 "64",
+                 "68"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 15:05:06 2018</p>
+         Last Run: Tue Nov 20 16:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>23</td>
+                        <td>NNE</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,7 +273,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
@@ -285,7 +285,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
@@ -404,9 +404,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "57",
-                 "54",
-                 "55"
+                 "58",
+                 "55",
+                 "56"
                ]
              },
              {
@@ -415,8 +415,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "23",
+                 "44",
+                 "24",
                  "12",
                  "12"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 15:05:06 2018</p>
+         Last Run: Tue Nov 20 16:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -495,7 +495,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -507,7 +507,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "53",
-                 "51"
+                 "59",
+                 "54",
+                 "52"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 20 15:05:06 2018</p>
+         Last Run: Tue Nov 20 16:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -722,7 +722,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "72",
-                 "73"
+                 "73",
+                 "73",
+                 "74"
                ]
              },
              {
@@ -846,7 +846,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
+                 "68",
                  "70",
                  "74"
                ]
